fix vh on iphone

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -86,7 +86,6 @@ h2 {
 .bid-modal {
 	z-index: 1;
 	position: fixed;
-	min-height: 100vh;
 	height: -webkit-fill-available;
 	margin: 5% 0 15% 0 ;
 	width: 90vw;
